--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,16 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: 'Sono', sans-serif;
+}
+
+.container {
+  width: 86%;
+  margin: auto;
 }
 
 header {
@@ -104,7 +110,7 @@ main {
 
 aside {
   min-width: 150px;
-  padding: 0 2rem;
+  padding: 0 1rem;
 }
 
 aside ul {
@@ -195,6 +201,10 @@ section li div button:hover {
 
 /* For screens up to 768px wide (mobile) */
 @media only screen and (max-width: 768px) {
+  .container {
+    width: 100%;
+    padding: 0.5rem;
+  }
   header {
     flex-direction: column;
     padding: 0.5rem;
@@ -264,6 +274,10 @@ section li div button:hover {
 
 /* For screens between 600px and 900px wide (tablet) */
 @media only screen and (min-width: 600px) and (max-width: 900px) {
+  .container {
+    width: 100%;
+    padding: 0.5rem;
+  }
   header {
     flex-direction: row;
   }
