Adding Fact component with props

--- a/src/index.css
+++ b/src/index.css
@@ -132,8 +132,28 @@ aside button {
   width: 100%;
 }
 
+@keyframes vibration {
+  0% {
+    transform: rotate(-2deg);
+  }
+  25% {
+    transform: rotate(2deg);
+  }
+  50% {
+    transform: rotate(-2deg);
+  }
+  75% {
+    transform: rotate(2deg);
+  }
+  100% {
+    transform: rotate(-2deg);
+  }
+}
+
 aside button:hover {
   background-color: #444;
+  transform: scale(105%) rotate(-2deg);
+  animation: vibration 0.3s ease-in-out;
 }
 
 section {
