--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
+:root {
+  --grey: #f8f8f8;
+  --box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -18,7 +23,10 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 1rem;
-  background-color: #f8f8f8;
+  margin: 0.5rem 0;
+  background-color: var(--grey);
+  border-radius: 8px;
+  /* box-shadow: var(--box-shadow); */
 }
 
 header img {
@@ -54,8 +62,9 @@ form {
   align-items: center;
   margin: 1rem 0;
   padding: 1rem;
-  background-color: #f8f8f8;
-  border-radius: 4px;
+  background-color: var(--grey);
+  border-radius: 8px;
+  /* box-shadow: var(--box-shadow); */
 }
 
 form input[type='text'] {
