--- a/src/index.css
+++ b/src/index.css
@@ -166,6 +166,35 @@ aside button:hover {
   animation: vibration 0.3s ease-in-out;
 }
 
+.loading-spinner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+}
+
+.loading-spinner:before {
+  content: '';
+  display: block;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  border: 4px solid #f3f3f3;
+  border-top-color: #3498db;
+  animation: spin 1s ease-in-out infinite;
+}
+
+.loading-spinner > span {
+  padding-left: 10px;
+  font-weight: bold;
+}
+
+@keyframes spin {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
 section {
   flex-grow: 1;
 }
