--- a/src/index.css
+++ b/src/index.css
@@ -114,7 +114,7 @@ form button:hover {
 
 main {
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   margin-top: 2rem;
 }
 
